--- a/Sidebery5-GroupPage.css
+++ b/Sidebery5-GroupPage.css
@@ -1,7 +1,5 @@
 #root[data-color-scheme=dark]{
-	--frame-bg: #141414}
+	--frame-bg: #111}
 
-body[data-layout="grid"] .bg,
-body[data-layout="grid"] .tab[data-discarded=true] .bg,
-body[data-layout=grid] .tab[data-discarded=true]:hover .bg{
-	opacity:.4}
+body[data-layout=grid] .tab[data-discarded=false] .bg{
+	opacity: .4}
