--- a/Sidebery5-Sidebar.css
+++ b/Sidebery5-Sidebar.css
@@ -6,10 +6,10 @@
 }
 
 #root[data-color-scheme=dark]{
-	--toolbar-bg:        hsl(252, 4%, 10%);
+	--toolbar-bg:        hsl(252, 4%, 6%);
 	--frame-bg:          hsl(252, 4%, 6%);
 	--hover-bg:         hsla(252, 4%, 100%, 8%);
-	--active-bg:         hsl(252, 4%, 4%);
+	--active-bg:        hsla(252, 4%, 100%, 8%);
 	--tabs-activated-bg: hsl(252, 4%, 18%);
 	--selected-bg:       hsl(252, 4%, 20%);
 	--ctx-menu-bg:       hsl(252, 4%, 9%);
@@ -36,9 +36,6 @@
 .NavigationBar .nav-item:not([data-active="true"]) .icon{
 	opacity:.65}
 
-#root.root[data-color-scheme=dark] .NavigationBar .nav-item[data-active="true"]:not(:hover){
-	box-shadow: inset 0 0 0 1px black}
-
 .NavigationBar .nav-item .len{
 	top:-2px;
 	right:0}
@@ -59,9 +56,6 @@
 
 #root.root[data-color-scheme=dark] .ScrollBox > .bottom-shadow{
 	box-shadow: 0 -1px 12px 0 #000}
-
-.TabsPanel .scrollable{
-	padding:0}
 
 
 
